--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/AhmetMuratAcar/grabby/issues"
   },
-  "homepage": "https://github.com/AhmetMuratAcar/grabby#readme"
+  "homepage": "https://github.com/AhmetMuratAcar/grabby#readme",
+  "dependencies": {
+    "axios": "^1.6.4",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
+  }
 }
