--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grabby",
   "version": "1.0.0",
   "description": "A tool for grabbing important dates from syllabuses",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "google-auth-library": "^9.9.0",
     "googleapis": "^134.0.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.28.4",
