--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "google-auth-library": "^9.9.0",
     "googleapis": "^134.0.0",
     "multer": "^1.4.5-lts.1",
